feat: add router GetMyGroup
